--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=NarutoAPI
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver=org.h2.Driver
-spring.datasource.username=felipe
-spring.datasource.password=123
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 # Configurações do JPA // HIBERNATE
 spring.h2.console.enabled=true
